--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-dist
-cabal-dev
 *.o
 *.hi
-*.chi
-*.chs.h
+*~
+leveldb.buildinfo
+config.log
+config.status
+configure
+autom4te.cache
+examples/ffi_test
+examples/ex1
+/.hsenv*
+/dist*
