--- a/whistlepig.cabal
+++ b/whistlepig.cabal
@@ -35,6 +35,7 @@ source-repository head
 library
   exposed-modules:
     Text.Search.Whistlepig
+    Text.Search.Whistlepig.IO
     Text.Search.Whistlepig.FFI
   build-depends:
     base         >= 4,
