Initial high level skeleton bindings
Also convert tests to use it.

Signed-off-by: Austin Seipp <mad.one@gmail.com>

--- a/whistlepig.cabal
+++ b/whistlepig.cabal
@@ -87,8 +87,9 @@ test-suite properties
   build-depends:
     base           >= 4,
     bytestring,
+    transformers,
+    resourcet,
     HUnit,
-    QuickCheck,
     hspec,
     whistlepig
 
