Use wp_query_to_s in Show Query instance. Other small changes. Closes #6.
Signed-off-by: Austin Seipp <mad.one@gmail.com>

--- a/whistlepig.cabal
+++ b/whistlepig.cabal
@@ -49,6 +49,7 @@ library
     transformers,
     resourcet
 
+  extra-libraries: pthread
   cc-options: -std=c99 -D_ANSI_SOURCE -D_XOPEN_SOURCE=600
 
   hs-source-dirs: src
