Copy top-level module to a Direct module.
The direct module will provide the current interface. I'm going
to make an exception-based interface the default.

Signed-off-by: Austin Seipp <aseipp@pobox.com>

--- a/whistlepig.cabal
+++ b/whistlepig.cabal
@@ -35,6 +35,7 @@ source-repository head
 library
   exposed-modules:
     Text.Search.Whistlepig
+    Text.Search.Whistlepig.Direct
     Text.Search.Whistlepig.FFI
   other-modules:
     Text.Search.Whistlepig.Index
